--- a/dataverse-webapp/src/main/webapp/editDatasetMetadata.xhtml
+++ b/dataverse-webapp/src/main/webapp/editDatasetMetadata.xhtml
@@ -58,8 +58,7 @@
 
                     <ui:fragment>
                         <ui:include src="metadata-importers-fragment.xhtml">
-                            <ui:param name="importers" value="#{editDatasetMetadataPage.importers}"/>
-                            <ui:param name="selectedImporter" value="#{editDatasetMetadataPage.selectedImporter}"/>
+                            <ui:param name="pageBean" value="#{editDatasetMetadataPage}"/>
                         </ui:include>
                     </ui:fragment>
 
