--- a/dataverse-webapp/src/main/webapp/dataverse_header.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverse_header.xhtml
@@ -89,7 +89,7 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                                aria-haspopup="true" aria-controls="navbarsearch-modal" aria-expanded="false">
-                                #{bundle['header.support']} <b class="caret"></b>
+                                #{bundle['header.help']} <b class="caret"></b>
                             </a>
                             <ul class="dropdown-menu">
                                 <li>
