--- a/dataverse-webapp/src/main/webapp/createEditDataverse.xhtml
+++ b/dataverse-webapp/src/main/webapp/createEditDataverse.xhtml
@@ -131,24 +131,18 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6 form-group form-col-container">
-                            <label class="col-sm-3 control-label" for="description">
+                            <label class="col-sm-3 control-label" for="textEditor">
                                 #{bundle.description}
                                 <span class="glyphicon glyphicon-question-sign tooltip-icon" tabindex="0" role="button"
                                         data-toggle="tooltip" data-placement="auto right"
                                         data-original-title="#{bundle['dataverse.description.title']}"></span>
                             </label>
                             <div class="col-sm-9 form-col-container">
-                                <p class="help-block">
-                                    <h:outputFormat value="#{bundle.htmlAllowedMsg}" escape="false">
-                                        <f:param value="#{bundle.htmlAllowedTags}"/>
-                                    </h:outputFormat>
-                                </p>
-                                <p:inputTextarea id="description" styleClass="form-control resize-vertical"
-                                                    value="#{CreateEditDataversePage.dataverse.description}"
-                                                    rows="6" cols="50"
-                                                    autoResize="false">
-                                </p:inputTextarea>
-                                <p:message for="description" display="text"/>
+                                <ui:include src="/WEB-INF/templates/textEditor.xhtml">
+                                    <ui:param name="editorValue" value="#{CreateEditDataversePage.dataverse.description}" />
+                                    <ui:param name="editorWatermark" value="" />
+                                </ui:include>
+                                <p:message for="textEditor" display="text"/>
                             </div>
                         </div>
                         <div class="col-md-6 form-group form-col-container">
