--- a/dataverse-webapp/src/main/webapp/createEditDataverse.xhtml
+++ b/dataverse-webapp/src/main/webapp/createEditDataverse.xhtml
@@ -167,7 +167,7 @@
                                                 var="contacts"
                                                 varStatus="valCount">
                                         <div class="form-group">
-                                            <div class="col-xs-9 col-md-6 col-lg-7 form-col-container">
+                                            <div class="col-xs-9 col-md-6 col-lg-7 form-col-container field-add-delete-input">
                                                 <p:inputText id="contactEmail" 
                                                                 styleClass="form-control"
                                                                 value="#{contacts.contactEmail}">
