--- a/dataverse-webapp/src/main/webapp/dataset.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataset.xhtml
@@ -82,8 +82,8 @@
                 <!-- Header / Button Panel -->
                 <!-- View editMode -->
                 <p:fragment id="topDatasetBlockFragment">
-                    <!-- static Info Messages -->
-                    <p:outputPanel id="privateUrlInfoMessage">
+                    <!-- static Messages -->
+                    <p:outputPanel id="staticMessagesPanel">
                         <div jsf:rendered="#{DatasetPage.isLockedBy('Workflow')}" class="alert alert-warning" role="alert" aria-atomic="true">
                             <span class="glyphicon glyphicon-exclamation-sign"></span>&#160;<strong>#{bundle['dataset.locked.message']}</strong> –
                             <h:outputText escape="false" value="#{bundle['dataset.locked.message.details']} "/>
@@ -110,7 +110,7 @@
                             <h:outputText escape="false" value="#{bundle['dataset.privateurl.infoMessageReviewer.details']}"/>
                         </div>
                     </p:outputPanel>
-                    <!-- END static Info Messages -->
+                    <!-- END static Messages -->
                     <div id="topDatasetBlock">
                         <div id="actionButtonBlock" class="button-block clearfix"
                              jsf:rendered="#{!widgetWrapper.widgetView}">
@@ -854,15 +854,15 @@
                         <div class="button-block">
                             <p:commandButton value="#{bundle['dataset.privateurl.createPrivateUrl']}"
                                              action="#{DatasetPage.createPrivateUrl()}"
-                                             update="privateUrlPanel, privateUrlInfoMessage, :messagePanel"
+                                             update="privateUrlPanel, staticMessagesPanel, :messagePanel"
                                              rendered="#{empty(DatasetPage.privateUrl)}" />
                             <p:commandButton value="#{bundle['dataset.privateurl.disablePrivateUrl']}"
                                              action="#{DatasetPage.setPrivateUrlJustCreatedToFalse()}"
                                              onclick="PF('privateUrlConfirmation').hide();PF('disablePrivateUrlConfirmation').show()"
-                                             rendered="#{!empty(DatasetPage.privateUrl)}" update="privateUrlPanel, privateUrlInfoMessage"/>
+                                             rendered="#{!empty(DatasetPage.privateUrl)}" update="privateUrlPanel, staticMessagesPanel"/>
                             <p:commandButton styleClass="btn btn-default" value="#{bundle.close}"
                                              onclick="PF('privateUrlConfirmation').hide();"
-                                             update="privateUrlPanel, privateUrlInfoMessage"/>
+                                             update="privateUrlPanel, staticMessagesPanel"/>
                         </div>
                     </p:fragment>
                 </p:dialog>
@@ -874,7 +874,7 @@
                     <div class="button-block">
                         <p:commandButton value="#{bundle['dataset.privateurl.disablePrivateUrlConfirm']}"
                                          action="#{DatasetPage.disablePrivateUrl()}"
-                                         update="privateUrlPanel privateUrlInfoMessage, :messagePanel"
+                                         update="privateUrlPanel staticMessagesPanel, :messagePanel"
                                          onclick="PF('disablePrivateUrlConfirmation').hide();"/>
                         <p:commandButton value="#{bundle.cancel}"
                                          onclick="PF('disablePrivateUrlConfirmation').hide();PF('privateUrlConfirmation').show();"
