--- a/dataverse-webapp/src/main/webapp/file.xhtml
+++ b/dataverse-webapp/src/main/webapp/file.xhtml
@@ -459,6 +459,7 @@
                                                     #{bundle['file.metadata.persistentId']}
                                                 </div>
                                                 <div class="col-sm-9">
+                                                    #{FilePage.file.getGlobalId()}
                                                 </div>
                                             </div>
                                             <!--Only show Public download url if identifier is available -->
