added comment explaining empty xhtml, changed migration number.

--- a/dataverse-webapp/src/main/webapp/notificationTemplate.xhtml
+++ b/dataverse-webapp/src/main/webapp/notificationTemplate.xhtml
@@ -1,9 +1,9 @@
 <ui:composition
-        xmlns:ui="http://java.sun.com/jsf/facelets"
->
+        xmlns:ui="http://java.sun.com/jsf/facelets">
 
 
 
 
 
 </ui:composition>
+<!-- Template was created in order to support notification implementations in other repositories.-->
