--- a/dataverse-webapp/src/main/webapp/notificationTemplate.xhtml
+++ b/dataverse-webapp/src/main/webapp/notificationTemplate.xhtml
@@ -6,4 +6,4 @@
 
 
 </ui:composition>
-<!-- Template was created in order to support notification implementations in other repositories.-->
+<!-- This template is intended to be overridden by Dataverse extensions to support notifications with custom types-->
