Designated a directory for pluggable UI components

--- a/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
+++ b/dataverse-webapp/src/main/webapp/dataverseuser.xhtml
@@ -118,7 +118,7 @@
                                 <ui:repeat value="#{DataverseUserPage.notificationsList}" var="item">
                                     <div class="notification-item #{item.displayAsRead ? '' : 'bg-warning'}">
                                         <div class="notification-item-cell">
-                                            <ui:include src="notificationTemplate.xhtml">
+                                            <ui:include src="pluggable/notifications.xhtml">
                                                 <ui:param name="item" value="#{item}" />
                                             </ui:include>
                                             <ui:fragment rendered="#{item.theObject == null}">
