Closes #1233: Metadata block options

--- a/dataverse-webapp/src/main/webapp/createEditDataverse.xhtml
+++ b/dataverse-webapp/src/main/webapp/createEditDataverse.xhtml
@@ -282,13 +282,17 @@
                                                     jsf:value="#{CreateEditDataversePage.mdbOptions.mdbViewOptions.get(mdb.id).selected}"
                                                     name="mdbSelectRequiredInherited" disabled="disabled"
                                                     jsf:rendered="#{CreateEditDataversePage.mdbOptions.inheritMetaBlocksFromParent}">
-                                                <p:ajax update="@widgetVar(optionBlock)"/>
+                                                <p:ajax update="@widgetVar(optionBlock)" onsuccess="#{CreateEditDataversePage.refreshDatasetFieldTypes(mdb.id,
+                                                CreateEditDataversePage.mdbOptions.mdbViewOptions.get(mdb.id).selected,
+                                                CreateEditDataversePage.mdbOptions.isShowDatasetFieldTypes(mdb.id))}" />
                                             </input>
                                             <input type="checkbox" jsf:itemValue="#{mdb}" id="#{mdb.idString}"
                                                     jsf:value="#{CreateEditDataversePage.mdbOptions.mdbViewOptions.get(mdb.id).selected}"
                                                     name="mdbSelectOptional"
                                                     jsf:rendered="#{!mdb.isCitationMetaBlock() and !CreateEditDataversePage.mdbOptions.inheritMetaBlocksFromParent}">
-                                                <p:ajax update="@widgetVar(optionBlock)"/>
+                                                <p:ajax update="@widgetVar(optionBlock)" onsuccess="#{CreateEditDataversePage.refreshDatasetFieldTypes(mdb.id,
+                                                CreateEditDataversePage.mdbOptions.mdbViewOptions.get(mdb.id).selected,
+                                                CreateEditDataversePage.mdbOptions.isShowDatasetFieldTypes(mdb.id))}" />
                                             </input>
                                             
                                             <h:outputText
