Closes #1265: Dataset lock during automatic analysis should not lock the possibility of file download

--- a/dataverse-webapp/src/main/webapp/resources/iqbs/fileDownloadButtons.xhtml
+++ b/dataverse-webapp/src/main/webapp/resources/iqbs/fileDownloadButtons.xhtml
@@ -22,7 +22,7 @@
 
 
 <composite:implementation>
-    <c:set var="downloadsDisabled" value="#{cc.attrs.fileMetadata.dataFile.ingestInProgress or cc.attrs.lockedFromDownload}"/>
+    <c:set var="downloadsDisabled" value="#{cc.attrs.lockedFromDownload}"/>
     <c:set var="canDownloadFile" value="#{fileDownloadHelper.canUserDownloadFile(cc.attrs.fileMetadata)}" />
     
     <ui:fragment rendered="#{worldMapPermissionHelper.canUserSeeExploreWorldMapButtonFromPage(fileMetadata)}">
