Closes #1521: Missing embargo info on files tab for unauthorized users

--- a/dataverse-webapp/src/main/webapp/filesFragment.xhtml
+++ b/dataverse-webapp/src/main/webapp/filesFragment.xhtml
@@ -17,8 +17,7 @@
         <div class="panel panel-default" jsf:rendered="#{!settingsWrapper.rsyncOnly}">
             <div class="panel-body">
                 <div class="col-sm-9">
-                    <ui:fragment rendered="#{!datasetFilesTab.dataset.hasActiveEmbargo()}">
-                        <p>#{bundle['file.notFound.tip']}</p>
+                    <ui:fragment rendered="#{!datasetFilesTab.dataset.hasActiveEmbargo()}">                        <p>#{bundle['file.notFound.tip']}</p>
                     </ui:fragment>
                     <ui:fragment rendered="#{datasetFilesTab.dataset.hasActiveEmbargo()}">
                         <p>
