Closes #1560: Fix files downloading

--- a/dataverse-webapp/src/main/webapp/file.xhtml
+++ b/dataverse-webapp/src/main/webapp/file.xhtml
@@ -194,6 +194,10 @@
                             </div>
                         </div>
                     </div>
+                    <a id="currentDownloadRequestLink" href="#" target="_blank" rel="noopener noreferrer" download="" style="display: none;">
+                        download requested files
+                    </a>
+                    
                     <!-- END topDatasetBlock -->
                     <div id="fileImageTitle" class="row">
                         <div id="file-preview-icon-block" class="col-sm-4">
