--- a/dataverse-webapp/src/main/webapp/file.xhtml
+++ b/dataverse-webapp/src/main/webapp/file.xhtml
@@ -653,6 +653,14 @@
                         </div>
                     </p:dialog>
                 </h:form>
+                
+                <script type="text/javascript">
+
+                    function refreshAndClickDownloadLink(apiDownloadLink) {
+                        $('#currentDownloadRequestLink').attr('href', apiDownloadLink);
+                        $('#currentDownloadRequestLink')[0].click();
+                    }
+                </script>
             </ui:define>
         </ui:composition>
     </h:body>
